# DSL_generator

./: .gitignore  AGENT.md  AGENTS.md  README.md  pyproject.toml
configs/: symbolic_0_22_single_error_verify.json  symbolic_0_23_fresh_holdout.json  symbolic_0_24_term_rewriting.json  symbolic_0_25_term_rewriting_curriculum.json  symbolic_0_26_term_rewrite_rule_action.json  symbolic_0_27_term_rewrite_first_bad_repair.json  symbolic_0_28_term_verify_hardened.json  symbolic_0_29_relation_repair_hardened.json  symbolic_0_30_symbol_parts.json  symbolic_0_33_line_index_actions.json  symbolic_0_35_term_path_actions.json  symbolic_0_37_term_action_repeated_hardened.json  symbolic_0_39_task_spec_headers.json  symbolic_0_39_task_spec_line_codes.json  symbolic_0_40_task_spec_line_codes.json  symbolic_0_41_structural_actions.json  symbolic_0_43_formal_task_spec_headers.json  symbolic_0_49_term_rule_index_actions.json  symbolic_0_50_canonical_task_spec_headers.json  symbolic_0_52_standard_hardening_finetune.json  symbolic_0_53_implication_hardening_finetune.json  symbolic_0_54_implication_verify_heavy_finetune.json  symbolic_0_55_implication_unknown_hyp_finetune.json  symbolic_0_57_compact_v3_task_spec_headers.json  symbolic_0_58_non_implication_hardening_finetune.json  symbolic_0_59_line_index_actions.json  symbolic_0_86_zero_shot_new_families.json  symbolic_v1.json  symbolic_v10_same_vocab_stress.json  symbolic_v10_short_follow_action.json  symbolic_v11_stress_curriculum.json  symbolic_v12_repair_balanced_stress.json  symbolic_v13_tree_ancestry.json  (+20 more)
docs/: relational_object_v1.md
(+177 files in other folders)
