[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "reasoning-dsl-generators"
version = "0.1.0"
description = "Small symbolic DSL data generators for TRM-style reasoning tasks."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
reasoning-dsl = "reasoning_dsl.cli:main"

[tool.setuptools.packages.find]
include = ["reasoning_dsl*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
